k8s/01-mysql-usuarios.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-usuarios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-usuarios
  template:
    metadata:
      labels:
        app: mysql-usuarios
    spec:
      containers:
        - name: mysql-usuarios
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-usuarios-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-usuarios-storage
          persistentVolumeClaim:
            claimName: mysql-usuarios-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-usuarios
spec:
  selector:
    app: mysql-usuarios
  ports:
    - port: 3306
      targetPort: 3306
