k8s/02-mysql-entrenamientos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-entrenamientos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-entrenamientos
  template:
    metadata:
      labels:
        app: mysql-entrenamientos
    spec:
      containers:
        - name: mysql-entrenamientos
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-entrenamientos-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-entrenamientos-storage
          persistentVolumeClaim:
            claimName: mysql-entrenamientos-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-entrenamientos
spec:
  selector:
    app: mysql-entrenamientos
  ports:
    - port: 3306
      targetPort: 3306
