k8s/04-usuarios-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios-service
  template:
    metadata:
      labels:
        app: usuarios-service
    spec:
      containers:
        - name: usuarios-service
          image: usuarios-service:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: usuarios-service
spec:
  selector:
    app: usuarios-service
  ports:
    - port: 8081
      targetPort: 8081
