k8s/05-entrenamientos-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entrenamientos-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entrenamientos-service
  template:
    metadata:
      labels:
        app: entrenamientos-service
    spec:
      containers:
        - name: entrenamientos-service
          image: entrenamientos-service:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: entrenamientos-service
spec:
  selector:
    app: entrenamientos-service
  ports:
    - port: 8082
      targetPort: 8082
