k8s/07-networkpolicy-entrenamientos.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: entrenamientos-service-solo-desde-gateway
spec:
  podSelector:
    matchLabels:
      app: entrenamientos-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway-service
      ports:
        - protocol: TCP
          port: 8082
